# Startup-

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  goat.py  pyproject.toml  requirements-termux.txt  requirements-windows.txt  requirements.txt  run.py
unified-ai-agent/: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
unified-ai-agent/configs/: default.yaml  routes.yaml
unified-ai-agent/deployment/docker/: Dockerfile
unified-ai-agent/deployment/systemd/: unified-agent.service
unified-ai-agent/deployment/termux/: run_agent.sh
unified-ai-agent/docs/: installation.md  prompts.md  troubleshooting.md  usage.md
unified-ai-agent/prompts/: coder_prompt.txt  planner_prompt.txt  researcher_prompt.txt  safety_prompt.txt  system_prompt.txt  tool_router_prompt.txt
unified-ai-agent/scripts/: export_memory.py  run_dev.bat  run_dev.sh  setup_termux.sh
unified-ai-agent/src/agent/: __init__.py  app.py  cli.py  main.py  version.py
unified-ai-agent/src/agent/adapters/common/: __init__.py  arch.py  (+1 more)
unified-ai-agent/src/agent/api/: __main__.py  auth.py  schemas.py  server.py
unified-ai-agent/src/agent/core/: agent.py  executor.py  verifier.py  workflow.py
unified-ai-agent/src/agent/llm/: anthropic_client.py  client.py  groq_client.py  model_registry.py  provider_base.py
unified-ai-agent/src/agent/memory/: __init__.py  short_term.py
unified-ai-agent/src/agent/runtime/: __init__.py  bootstrap.py  logging.py
unified-ai-agent/src/agent/tools/: __init__.py  shell_tools.py  web_tools.py
unified-ai-agent/src/agent/utils/: validators.py
unified-ai-agent/tests/: test_executor.py  test_memory.py  test_planner.py  test_router.py
unified-ai-agent/web/: index.html
(+89 files in other folders)
