[project]
name = "unified-ai-agent"
version = "0.1.0"
description = "Unified cross-platform AI agent: plan, execute, verify, remember. Runs on Linux, Windows, Termux/Android and weak 32-bit devices."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "unified-ai-agent contributors" }]
keywords = ["ai", "agent", "cli", "coding", "terminal", "llm", "cross-platform"]
dependencies = []

[project.optional-dependencies]
ui = ["rich>=13.0.0"]
web = ["requests>=2.28.0"]
yaml = ["pyyaml>=6.0"]
all = ["rich>=13.0.0", "requests>=2.28.0", "pyyaml>=6.0"]

[project.scripts]
unified-agent = "agent.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
